--- a/package.json
+++ b/package.json
@@ -70,12 +70,12 @@
     "xlsx": "^0.18.5",
     "yup": "^1.0.1"
   },
-  "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+"scripts": {
+  "start": "PORT=3031 NODE_OPTIONS='--max_old_space_size=4096 --openssl-legacy-provider' react-scripts start",
+  "build": "NODE_OPTIONS='--max_old_space_size=4096 --openssl-legacy-provider' react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": "react-app"
   },
