--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "yup": "^1.0.1"
   },
 "scripts": {
-  "start": "PORT=3031 NODE_OPTIONS='--max_old_space_size=4096 --openssl-legacy-provider' react-scripts start",
-  "build": "NODE_OPTIONS='--max_old_space_size=4096 --openssl-legacy-provider' react-scripts build",
+  "start": "serve -s build -l 3031",
+  "build": "NODE_OPTIONS=--max_old_space_size=2048,--openssl-legacy-provider react-scripts build",
   "test": "react-scripts test",
   "eject": "react-scripts eject"
 },
